src/objects/SBQQ__Quote__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteHelp</customHelpPage>
    <description>Sales quote for a given opportunity. There may be multiple quotes for a single opportunity.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>SBQQ__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Manager_Id__c</fullName>
        <formula>Property__r.Asset_Management_Head__c</formula>
        <label>Asset Manager Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Annualised_Cost_of_Parking_Space__c</fullName>
        <formula>IF(
  AND(
    NOT(ISBLANK( Total_Annualised_Cost_of_Parking_Spaces__c )),
    NOT(ISBLANK( Total_Parking_Spaces__c ))
  ),
  Total_Annualised_Cost_of_Parking_Spaces__c / Total_Parking_Spaces__c,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Annualised Cost of Parking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BW_Signature_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BW Signature</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BW_Signed_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BW_Signature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BW Signature</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (BW Signature)</relationshipLabel>
        <relationshipName>BW_Signed_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CapExpiryFullTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cap Expiry Full Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Quotes (Contract)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conventional_Products_Qty__c</fullName>
        <label>Conventional Products Qty</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Quantity__c</fullName>
        <label>Default Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Payment_Total__c</fullName>
        <label>Deposit Payment Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Payment__c</fullName>
        <description>Deposit Payment on the Quote</description>
        <inlineHelpText>Deposit Payment on the Quote.</inlineHelpText>
        <label>Deposit Payment</label>
        <summarizedField>SBQQ__QuoteLine__c.Deposit_Payment__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <description>Total Deposit % on the Quote</description>
        <formula>Deposit_Payment__c / SBQQ__NetAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Deposit % on the Quote.</inlineHelpText>
        <label>Deposit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Lines_Quantity__c</fullName>
        <label>Design Lines Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dilapidations_Lines_Quantity__c</fullName>
        <label>Dilapidations Lines Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Amount_Total__c</fullName>
        <label>Discount Amount Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Default__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Default (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Full_Term_Percent__c</fullName>
        <label>Discount Full Term (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Full_Term__c</fullName>
        <label>Discount Full Term (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Term_Certain_Percent__c</fullName>
        <label>Discount Term Certain (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Term_Certain__c</fullName>
        <label>Discount Term Certain (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Documents_Counter__c</fullName>
        <label>Documents Counter</label>
        <summaryForeignKey>SBQQ__QuoteDocument__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EditLinesFieldSetName__c</fullName>
        <formula>IF(
Record_Type__c = &apos;Conventional&apos;,
&apos;Conventional_Quote&apos;,
IF(
Record_Type__c = &apos;Serviced&apos;,
&apos;Serviced_Quote&apos;,
IF(
Record_Type__c = &apos;Virtual&apos;,
&apos;Virtual_Quote&apos;,
&apos;SBQQ__LineEditor&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EditLinesFieldSetName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Business_Rate_Per_Annum__c</fullName>
        <label>Estimated Business Rate Per Annum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fit_Out_Lines_Quantity__c</fullName>
        <label>Fit Out Lines Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Monthly_Payment__c</fullName>
        <description>Monthly Payment on the Quote.</description>
        <inlineHelpText>Monthly Payment on the Quote.</inlineHelpText>
        <label>Full Monthly Payment</label>
        <summarizedField>SBQQ__QuoteLine__c.Monthly_Payment_Obsolete__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Headline_Item_Subscription_Term__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Headline Item Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Quotes (Legacy contract)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Fill_Sq_ft__c</fullName>
        <label>Net Fill (Sq ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Fill_Workstations__c</fullName>
        <label>Net Fill (Workstations)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Subtotal__c</fullName>
        <label>Net Subtotal (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <label>Net Total (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Viewing_Required_Comment__c</fullName>
        <description>Stores a comment of a sales user why he generates a quote with no a viewing</description>
        <label>No Viewing Required Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Deposit_Amount__c</fullName>
        <description>Non-Deposit Payment on the Quote.</description>
        <inlineHelpText>Non-Deposit Payment on the Quote.</inlineHelpText>
        <label>Non-Deposit Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.Line_Total_Price__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Off_line_Edits__c</fullName>
        <description>Specifies which offline changes are made under quote documents</description>
        <inlineHelpText>Specifies which offline changes are made under quote documents</inlineHelpText>
        <label>Off-line Edits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity2_Name__c</fullName>
        <formula>SBQQ__Opportunity2__r.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_URL__c</fullName>
        <formula>Left($Api.Enterprise_Server_URL_190,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_190))) +  SBQQ__Opportunity2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_by_BACs_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system field (not for users) will be checked when Pay by BACs request is approved.</description>
        <label>Pay by BACs Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pay_by_BACs_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system field (not for users) will be checked when Pay by BACs request is rejected.</description>
        <label>Pay by BACs Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pay_by_BACs_Status__c</fullName>
        <formula>IF(Pay_by_BACs__c, IF(Pay_by_BACs_Approved__c, &apos;Approved&apos;, IF(Pay_by_BACs_Rejected__c, &apos;Rejected&apos;, &apos;Waiting for approval&apos;)), &apos;Not requested&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay by BACs Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_by_BACs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once a user checks the field, Pay by BACs approval process will be started.</description>
        <label>Pay by BACs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Source__c</fullName>
        <defaultValue>&quot;Monthly_Updated_Price_Per_Sq_Ft&quot;</defaultValue>
        <label>Price Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly_Updated_Price_Per_Sq_Ft</fullName>
                    <label>Monthly Updated Price Per Sq Ft (£)</label>
                </value>
                <value>
                    <fullName>Annual_Average</fullName>
                    <label>Annual Average (£)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact_First_Name__c</fullName>
        <formula>SBQQ__PrimaryContact__r.FirstName</formula>
        <label>Primary Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <formula>Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quanta_Car_Space_Leased__c</fullName>
        <label>Quanta Car Space Leased</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPLS</fullName>
                    <default>true</default>
                    <label>CPLS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quanta_Car_Space__c</fullName>
        <defaultValue>&apos;CPLC&apos;</defaultValue>
        <label>Quanta Car Space</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPL</fullName>
                    <default>true</default>
                    <label>CPL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quanta_Dedicated_Licence_Fee__c</fullName>
        <defaultValue>&apos;DedLic&apos;</defaultValue>
        <label>Quanta Dedicated Licence Fee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DedLic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quanta_Hot_Desk_Licence_Fee__c</fullName>
        <defaultValue>&apos;DeskLic&apos;</defaultValue>
        <label>Quanta Hot Desk Licence Fee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DeskLic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quanta_Lab__c</fullName>
        <defaultValue>&apos;Lab&apos;</defaultValue>
        <label>Quanta Lab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quanta_Office__c</fullName>
        <defaultValue>&apos;Office&apos;</defaultValue>
        <label>Quanta Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quanta_Retail__c</fullName>
        <defaultValue>&apos;Retail&apos;</defaultValue>
        <label>Quanta Retail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quanta_Serviced_Licence_Fee__c</fullName>
        <defaultValue>&apos;SerLic&apos;</defaultValue>
        <label>Quanta Serviced Licence Fee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SerLic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quanta_Storage__c</fullName>
        <defaultValue>&apos;Storage&apos;</defaultValue>
        <label>Quanta Storage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Storage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quanta_Suite__c</fullName>
        <defaultValue>&apos;suite&apos;</defaultValue>
        <label>Quanta Suite</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>suite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Line_Car_Parking__c</fullName>
        <defaultValue>&apos;CarParking&apos;</defaultValue>
        <label>Quote Line Car Parking</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Dedicated_Desk__c</fullName>
        <defaultValue>&apos;DedicatedDesk&apos;</defaultValue>
        <label>Quote Line Dedicated Desk</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Fit_Out_PM_Fee__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Quote Line Fit Out PM Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Fit_Out_Percentage_Upfront__c</fullName>
        <defaultValue>60</defaultValue>
        <label>Quote Line Fit Out Percentage Upfront</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Lab_Space__c</fullName>
        <defaultValue>&apos;LabSpace&apos;</defaultValue>
        <label>Quote Line Lab Space</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Office_Rent__c</fullName>
        <defaultValue>&apos;OfficeRent&apos;</defaultValue>
        <label>Quote Line Office Rent</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Retail_Rent__c</fullName>
        <defaultValue>&apos;RetailRent&apos;</defaultValue>
        <label>Quote Line Retail Rent</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Serviced_Hot_Desk__c</fullName>
        <defaultValue>&apos;HotDesk&apos;</defaultValue>
        <description>Quote Line Serviced Hot Desk Bundle Code default value storage</description>
        <inlineHelpText>Quote Line Serviced Hot Desk Bundle Code default value storage</inlineHelpText>
        <label>Quote Line Serviced Hot Desk</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Serviced_Licence_Fee__c</fullName>
        <defaultValue>&apos;ServLicenFee&apos;</defaultValue>
        <description>Quote Line Serviced Licence Fee</description>
        <inlineHelpText>Quote Line Serviced Licence Fee</inlineHelpText>
        <label>Quote Line Serviced Licence Fee</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Storage__c</fullName>
        <defaultValue>&apos;Storage&apos;</defaultValue>
        <label>Quote Line Storage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Virtual_Licence_Fee__c</fullName>
        <defaultValue>&apos;VirtualLicenceFee&apos;</defaultValue>
        <label>Quote Line Virtual Licence Fee</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Lines_Inventory_Suite_Start_date__c</fullName>
        <description>System field, which is used(as a condition) in the process of creating Case in process builder &quot;New Case from Quote&quot;</description>
        <label>Quote Lines Inventory Suite Start date</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Quanta__c</field>
            <operation>equals</operation>
            <value>suite</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Start_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_Lines_Inventory_Suite__c</fullName>
        <description>System field, which is used(as a condition) in the process of creating Case in process builder &quot; New Case from Quote&quot;</description>
        <label>Quote Lines Inventory Suite</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Quanta__c</field>
            <operation>equals</operation>
            <value>suite</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_Lines_Tolerance_Exceeded__c</fullName>
        <label>Quote Lines Tolerance Exceeded</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Tolerance_Is_Exceeded__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_Record_Type_Source__c</fullName>
        <description>Used for Inventory lookup filtering, is being populated by Configuration Attribute from CPQ</description>
        <inlineHelpText>Used for Inventory lookup filtering, is being populated by Configuration Attribute from CPQ</inlineHelpText>
        <label>Quote Record Type Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>Serviced</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Stores record type name displayed on the layout</description>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;Conventional&quot;), &quot;Conventional&quot;,
IF(CONTAINS(RecordType.DeveloperName, &quot;Meeting_Rooms&quot;), &quot;Meeting Rooms&quot;,
IF(CONTAINS(RecordType.DeveloperName, &quot;Serviced&quot;), &quot;Serviced&quot;,
IF(CONTAINS(RecordType.DeveloperName, &quot;Virtual&quot;), &quot;Virtual&quot;, &quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Head_Id__c</fullName>
        <formula>Property__r.Regional_Head__c</formula>
        <label>Regional Head Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rent_per_Sq_Ft_annual__c</fullName>
        <description>Rent per Sq. Ft. annual (£)</description>
        <label>Rent per Sq. Ft. annual (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer account for this quote. Defaulted to the account for the opportunity when quote is created.</description>
        <inlineHelpText>The customer account for this quote. Defaults to the account for the opportunity when creating a quote.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Amount of additional discount on this quote.</description>
        <formula>SBQQ__RegularAmount__c - SBQQ__CustomerAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter the amount additionally discounted on this quote.</inlineHelpText>
        <label>Addl. Disc. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AverageCustomerDiscount__c</fullName>
        <description>Average customer discount (in percent) for this quote.</description>
        <formula>IF(SBQQ__ListAmount__c = 0, 0, ((SBQQ__ListAmount__c - SBQQ__CustomerAmount__c) / SBQQ__ListAmount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average customer discount (in percent) for this quote.</inlineHelpText>
        <label>Avg. Customer Disc. (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__AveragePartnerDiscount__c</fullName>
        <description>Average partner discount (in percent) for this quote.</description>
        <formula>IF(SBQQ__CustomerAmount__c = 0, 0, (SBQQ__CustomerAmount__c -  SBQQ__NetAmount__c) / SBQQ__CustomerAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average partner discount (in percent) for this quote.</inlineHelpText>
        <label>Avg. Partner Disc. (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingCity__c</fullName>
        <description>City of the Bill To address for this quote.</description>
        <inlineHelpText>City of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingCountry__c</fullName>
        <description>Country of the Bill To address for this quote.</description>
        <inlineHelpText>Country of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingName__c</fullName>
        <description>Name for the Bill To address.</description>
        <inlineHelpText>Name for the Bill To address.</inlineHelpText>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingPostalCode__c</fullName>
        <description>Postal Code of the Bill To address for this quote.</description>
        <inlineHelpText>Postal Code of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingState__c</fullName>
        <description>State/Province of the Bill To address for this quote.</description>
        <inlineHelpText>State/Province of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingStreet__c</fullName>
        <description>Street portion of the billing address for this quote.</description>
        <inlineHelpText>Street portion of the billing address for this quote.</inlineHelpText>
        <label>Bill To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ChangeVersion__c</fullName>
        <description>The Amend: Re-Quote version number for the quote. It starts with 1 and the original quote will not have a value.</description>
        <inlineHelpText>The Amend: Re-Quote version number for the quote.</inlineHelpText>
        <label>Amend: Re-Quote Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</description>
        <inlineHelpText>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Subscription End Date</fullName>
                    <default>true</default>
                    <label>By Subscription End Date</label>
                </value>
                <value>
                    <fullName>Single Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerAmount__c</fullName>
        <description>This is a Roll-Up Summary field.</description>
        <inlineHelpText>This is a Roll-Up Summary field.</inlineHelpText>
        <label>Customer Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__CustomerTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerDiscount__c</fullName>
        <description>Additional discount extended to customer.</description>
        <inlineHelpText>Additional discount extended to the customer on this quote. This value can be overridden at the individual line item level. Any line items that don&apos;t have additional discount explicitly specified will default to this value.</inlineHelpText>
        <label>Additional Disc. (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DaysQuoteOpen__c</fullName>
        <description>Number of days the quote has been opened.</description>
        <formula>if(OR(ISPICKVAL( SBQQ__Status__c ,&quot;Draft&quot; ),ISPICKVAL( SBQQ__Status__c ,&quot;In Review&quot;),ISPICKVAL( SBQQ__Status__c , &quot;Approved&quot;), ISPICKVAL( SBQQ__Status__c , &quot;Presented&quot;)),Round(NOW() - CreatedDate,0) ,null)</formula>
        <inlineHelpText>Number of days the quote has been opened.</inlineHelpText>
        <label>Days Quote Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template that should be used with this quote. Salesforce CPQ will use this value to default template selection on &quot;Generate Document&quot; screen.</description>
        <inlineHelpText>Template that should be used with this quote. Salesforce CPQ automatically selects the template specified here when you click &quot;Generate Document&quot;</inlineHelpText>
        <label>Default Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DeliveryMethod__c</fullName>
        <description>Method used to deliver products on this quote.</description>
        <inlineHelpText>Method used to deliver products on this quote.</inlineHelpText>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>Ship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>